examples/datalog/11_types/20_mixed_arithmetic.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_mixed_arith
Knowledge graph 'test_mixed_arith' created.
Switched to knowledge graph: test_mixed_arith
> .kg use test_mixed_arith
Switched to knowledge graph: test_mixed_arith
> +integers[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'integers'.
> +floats[(1.5,), (2.5,), (3.5,)].
Inserted 3 fact(s) into 'floats'.
> int_doubled(X, D) :- integers(X), D = X * 2.
Script error: Query execution failed: Unsafe rule: Atom { relation: "int_doubled", args: [Variable("X"), Variable("D")] }. Variables ["D"] in head do not appear in positive body atoms.
